fix(xbrl): fall back to JSoup when strict XML parsing fails on legacy filings
Legacy SEC EDGAR filings (e.g., .TXT format) contain SGML-style tags like
<C> for column formatting that are invalid XML. Added parseWithJsoupFallback()
that catches SAXParseException and re-parses with JSoup's lenient HTML parser,
converting to W3C DOM via W3CDom. Applied at both companion XBRL and
traditional XBRL parse paths. Plain-text filings with no XBRL data
gracefully return empty output instead of throwing.

Added MalformedXbrlParseTest that downloads the specific failing filing
(CIK 0000790273, conc2ndq.TXT) and verifies it does not throw.

Also fixed deprecated URL(String) constructor warnings in CrimeDataLiveTest
and WeatherDataLiveTest.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>