@@ -33,6 +33,7 @@ import org.slf4j.LoggerFactory;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -364,7 +365,7 @@ class CrimeDataLiveTest {
   private static String httpGet(String urlStr) throws Exception {
     int maxRetries = 3;
     for (int attempt = 1; attempt <= maxRetries; attempt++) {
-      URL url = new URL(urlStr);
+      URL url = URI.create(urlStr).toURL();
       HttpURLConnection conn = (HttpURLConnection) url.openConnection();
       conn.setRequestMethod("GET");
       conn.setRequestProperty("Accept", "application/json");
